--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 2,
    "id": "e2299ca1",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,8 @@
     "import pandas as pd\n",
     "import gmaps\n",
     "from config import petfinder_api_key\n",
-    "from config import petfinder_secret"
+    "from config import petfinder_secret\n",
+    "from config import gkey"
    ]
   },
   {
@@ -12193,7 +12194,7 @@
    "outputs": [],
    "source": [
     "# Configure gmaps to use your Google API key.\n",
-    "gmaps.configure(api_key='AIzaSyC_HDlYi6NEah11KtUC6ff94ypH0RSKyds')"
+    "gmaps.configure(api_key=gkey)"
    ]
   },
   {
